# LogNorm

./: Cargo.toml  README.md
src/: config.rs  main.rs  normalizer.rs  output.rs
src/parsers/: apache.rs  journalctl.rs  json.rs  mod.rs  nginx.rs  python_web.rs  syslog.rs
