[package]
name = "lognorm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }    # CLI args
regex = "1"                                        # Parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
memchr = "2.5"
memmap2 = "0.9.8"
rayon = { version = "1.7", optional = true }
crossbeam = "0.8"

[features]
parallel = ["rayon"]

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"
